syntax = "proto3";

option java_package = "ru.yandex.ci.api.internal.security";
option java_multiple_files = true;

import "ci/proto/common.proto";

service SecurityApi {
    rpc DelegateToken (DelegateTokenRequest) returns (DelegateTokenResponse);
    rpc DelegatePrToken (DelegatePrTokenRequest) returns (DelegatePrTokenResponse); //Temporary
}

message DelegateTokenRequest {
    string config_dir = 1;

    // Optional.
    // If not present then delegate a.yaml from latest revision in trunk
    ci.common.OrderedArcRevision revision = 2;
}

message DelegateTokenResponse {
}

message DelegatePrTokenRequest {
    string config_dir = 1;
    int64 pull_request_id = 2;
}

message DelegatePrTokenResponse {
    Status status = 1;

    enum Status {
        OK = 0;
    }
}

